Standardize mower state keys and update translations
Changed mower state constants in const.py to use lowercase snake_case keys for consistency. Updated all translation files (da, de, en, fi, fr) to use the new keys and added missing 'updating_firmware' state translations.

--- a/custom_components/sunseeker/translations/da.json
+++ b/custom_components/sunseeker/translations/da.json
@@ -149,25 +149,26 @@
 			"sunseeker_mower_state": {
 				"name": "Robot status",
 				"state": {
-					"Standby": "Standby",
-					"Mowing": "Klipper",
-					"On the way home": "På vej hjem",
-					"Charging": "Oplader",
-					"Mowing border": "Klipper kant",
-					"Unknown": "Ukendt",
-					"Unknown4": "Mode 4",
-					"Idle": "Standby",
-					"Working": "Klipper",
-					"Pause": "Pause",
-					"Error": "Fejl",
-					"Return": "På vej hjem",
-					"Return pause": "Pause på vej hjem",
-					"Charging full": "Opladet",
-					"Offline": "Offline",
-					"Locating": "Positionere",
-					"Stop": "Stoppet",
-					"Continue mowing": "Fortsætter klipning",
-       			    "Stuck": "Sidder fast"
+					"standby": "Standby",
+					"mowing": "Klipper",
+					"on_the_way_home": "På vej hjem",
+					"charging": "Oplader",
+					"mowing_border": "Klipper kant",
+					"unknown": "Ukendt",
+					"unknown4": "Mode 4",
+					"idle": "Standby",
+					"working": "Klipper",
+					"pause": "Pause",
+					"error": "Fejl",
+					"return": "På vej hjem",
+					"return_pause": "Pause på vej hjem",
+					"charging_full": "Opladet",
+					"offline": "Offline",
+					"locating": "Positionere",
+					"stop": "Stoppet",
+					"continue_mowing": "Fortsætter klipning",
+          			"stuck": "Sidder fast",
+					"updating_firmware": "Opdatere firmware"
 				}
 			},
 			"sunseeker_battery": {
@@ -246,25 +247,26 @@
 		"lawn_mower": {
 			"sunseeker_lawnmower": {
                 "state": {
-					"Standby": "Standby",
-					"Mowing": "Klipper",
-					"On the way home": "På vej hjem",
-					"Charging": "Oplader",
-					"Mowing border": "Klipper kant",
-					"Unknown": "Ukendt",
-					"Unknown4": "Mode 4",
-					"Idle": "Standby",
-					"Working": "Klipper",
-					"Pause": "Pause",
-					"Error": "Fejl",
-					"Return": "På vej hjem",
-					"Return pause": "Pause på vej hjem",
-					"Charging full": "Opladet",
-					"Offline": "Offline",
-					"Locating": "Positionere",
-					"Stop": "Stoppet",
-					"Continue mowing": "Fortsætter klipning",
-          			"Stuck": "Sidder fast"
+					"standby": "Standby",
+					"mowing": "Klipper",
+					"on_the_way_home": "På vej hjem",
+					"charging": "Oplader",
+					"mowing_border": "Klipper kant",
+					"unknown": "Ukendt",
+					"unknown4": "Mode 4",
+					"idle": "Standby",
+					"working": "Klipper",
+					"pause": "Pause",
+					"error": "Fejl",
+					"return": "På vej hjem",
+					"return_pause": "Pause på vej hjem",
+					"charging_full": "Opladet",
+					"offline": "Offline",
+					"locating": "Positionere",
+					"stop": "Stoppet",
+					"continue_mowing": "Fortsætter klipning",
+          			"stuck": "Sidder fast",
+					"updating_firmware": "Opdatere firmware"
 				}
 			}
 		},
