--- a/custom_components/sunseeker/translations/de.json
+++ b/custom_components/sunseeker/translations/de.json
@@ -142,25 +142,27 @@
       "sunseeker_mower_state": {
         "name": "Rasenmäher-Status",
         "state": {
-          "Standby": "Standby",
-          "Mowing": "Mäht",
-          "On the way home": "Fährt zum Dock",
-          "Charging": "Im Dock (Lädt)",
-          "Mowing border": "Mäht Grenze",
-          "Unknown": "Unbekannt",
-          "Unknown4": "Modus 4",
-          "Idle": "Bereit",
-          "Working": "Mäht",
-          "Pause": "Pausiert",
-          "Error": "Fehler",
-          "Return": "Fährt zum Dock",
-          "Return pause": "Fahrt zum Dock pausiert",
-          "Charging full": "Im Dock (Vollgeladen)",
-          "Offline": "Keine Verbindung",
-          "Locating": "Positionsbestimmung",
-          "Stop": "Gestoppt",
-          "Continue mowing": "Weiter mähen",
-          "Stuck": "Festgefahren"
+          "standby": "Standby",
+          "mowing": "Mäht",
+          "on_the_way_home": "Fährt zum Dock",
+          "charging": "Lädt",
+          "mowing border": "Mäht Grenze",
+          "unknown": "Unbekannt",
+          "unknown4": "Modus 4",
+          "idle": "Bereit",
+          "working": "Mäht",
+          "pause": "Pausiert",
+          "error": "Fehler",
+          "return": "Fährt zum Dock",
+          "return_pause": "Fahrt zum Dock pausiert",
+          "charging_full": "Im Dock (Vollgeladen)",
+          "offline": "Keine Verbindung",
+          "locating": "Positionsbestimmung",
+          "stop": "Gestoppt",
+          "continue_mowing": "Weiter mähen",
+          "stuck": "Festgefahren",
+ 					"updating_firmware": "Opdating firmware"
+
         }
       },
       "sunseeker_battery": {
@@ -239,25 +241,27 @@
     "lawn_mower": {
       "sunseeker_lawnmower": {
         "state": {
-          "Standby": "Standby",
-          "Mowing": "Mäht",
-          "On the way home": "Fährt zum Dock",
-          "Charging": "Lädt",
-          "Mowing border": "Mäht Grenze",
-          "Unknown": "Unbekannt",
-          "Unknown4": "Modus 4",
-          "Idle": "Bereit",
-          "Working": "Mäht",
-          "Pause": "Pausiert",
-          "Error": "Fehler",
-          "Return": "Fährt zum Dock",
-          "Return pause": "Fahrt zum Dock pausiert",
-          "Charging full": "Im Dock (Vollgeladen)",
-          "Offline": "Keine Verbindung",
-          "Locating": "Positionsbestimmung",
-          "Stop": "Gestoppt",
-          "Continue mowing": "Weiter mähen",
-          "Stuck": "Festgefahren"
+          "standby": "Standby",
+          "mowing": "Mäht",
+          "on_the_way_home": "Fährt zum Dock",
+          "charging": "Lädt",
+          "mowing border": "Mäht Grenze",
+          "unknown": "Unbekannt",
+          "unknown4": "Modus 4",
+          "idle": "Bereit",
+          "working": "Mäht",
+          "pause": "Pausiert",
+          "error": "Fehler",
+          "return": "Fährt zum Dock",
+          "return_pause": "Fahrt zum Dock pausiert",
+          "charging_full": "Im Dock (Vollgeladen)",
+          "offline": "Keine Verbindung",
+          "locating": "Positionsbestimmung",
+          "stop": "Gestoppt",
+          "continue_mowing": "Weiter mähen",
+          "stuck": "Festgefahren",
+ 					"updating_firmware": "Opdating firmware"
+
         }
       }
     },
