--- a/custom_components/sunseeker/translations/en.json
+++ b/custom_components/sunseeker/translations/en.json
@@ -150,25 +150,26 @@
         "sunseeker_mower_state": {
           "name": "Mower status",
           "state": {
-            "Standby": "Standby",
-            "Mowing": "Mowing",
-            "On the way home": "Going home",
-            "Charging": "Charging",
-            "Mowing border": "Border",
-            "Unknown": "Unknown",
-            "Unknown4": "Mode 4",
-            "Idle": "Standby",
-					"Working": "Working",
-					"Pause": "Pause",
-					"Error": "Error",
-					"Return": "Returning",
-					"Return pause": "Returning paused",
-					"Charging full": "Charged",
-					"Offline": "Offline",
-					"Locating": "Locating",
-					"Stop": "Stoped",
-          "Continue mowing": "Continue mowing",
-          "Stuck": "Stuck"
+            "standby": "Standby",
+            "mowing": "Mowing",
+            "on_the_way_home": "Going home",
+            "charging": "Charging",
+            "mowing_border": "Border",
+            "unknown": "Unknown",
+            "unknown4": "Mode 4",
+            "idle": "Standby",
+            "working": "Working",
+					"pause": "Pause",
+					"error": "Error",
+					"return": "Returning",
+					"return_pause": "Returning paused",
+					"charging_full": "Charged",
+					"offline": "Offline",
+					"locating": "Locating",
+					"stop": "Stoped",
+ 					"continue_mowing": "Continue mowing",
+          "stuck": "Stuck",
+          "updating_firmware": "Opdating firmware"
           }
         },
         "sunseeker_battery": {
@@ -247,25 +248,26 @@
       "lawn_mower": {
         "sunseeker_lawnmower": {
           "state": {
-            "Standby": "Standby",
-            "Mowing": "Mowing",
-            "On the way home": "Going home",
-            "Charging": "Charging",
-            "Mowing border": "Border",
-            "Unknown": "Unknown",
-            "Unknown4": "Mode 4",
-            "Idle": "Standby",
-            "Working": "Working",
-					"Pause": "Pause",
-					"Error": "Error",
-					"Return": "Returning",
-					"Return pause": "Returning paused",
-					"Charging full": "Charged",
-					"Offline": "Offline",
-					"Locating": "Locating",
-					"Stop": "Stoped",
- 					"Continue mowing": "Continue mowing",
-          "Stuck": "Stuck"
+            "standby": "Standby",
+            "mowing": "Mowing",
+            "on_the_way_home": "Going home",
+            "charging": "Charging",
+            "mowing_border": "Border",
+            "unknown": "Unknown",
+            "unknown4": "Mode 4",
+            "idle": "Standby",
+            "working": "Working",
+					"pause": "Pause",
+					"error": "Error",
+					"return": "Returning",
+					"return_pause": "Returning paused",
+					"charging_full": "Charged",
+					"offline": "Offline",
+					"locating": "Locating",
+					"stop": "Stoped",
+ 					"continue_mowing": "Continue mowing",
+          "stuck": "Stuck",
+          "updating_firmware": "Opdating firmware"
           }
         }
       },
