--- a/custom_components/sunseeker/translations/fi.json
+++ b/custom_components/sunseeker/translations/fi.json
@@ -130,25 +130,26 @@
             "sunseeker_mower_state": {
                 "name": "Robotin tila",
                 "state": {
-                    "Standby": "Valmiustila",
-                    "Mowing": "Leikkaa",
-                    "On the way home": "Palaamassa kotiin",
-                    "Charging": "Lataa",
-                    "Mowing border": "Reunaleikkaus",
-                    "Unknown": "Tuntematon",
-                    "Unknown4": "Tila 4",
-                    "Idle": "Valmiustila",
-                    "Working": "Työskentelee",
-                    "Pause": "Tauko",
-                    "Error": "Virhe",
-                    "Return": "Palaa kotiin",
-                    "Return pause": "Paluutauko",
-                    "Charging full": "Ladattu",
-                    "Offline": "Ei yhteyttä",
-                    "Locating": "Paikantaa",
-                    "Stop": "Pysäytetty",
-                    "Continue mowing": "Jatka leikkaamista",
-                    "Stuck": "Jumissa"
+                    "standby": "Valmiustila",
+                    "mowing": "Leikkaa",
+                    "on_the_way_home": "Palaa kotiin",
+                    "charging": "Lataa",
+                    "mowing_border": "Reunaleikkaus",
+                    "unknown": "Tuntematon",
+                    "unknown4": "Tila 4",
+                    "idle": "Valmiustila",
+                    "working": "Työskentelee",
+                    "pause": "Tauko",
+                    "error": "Virhe",
+                    "return": "Palaa kotiin",
+                    "return_pause": "Paluutauko",
+                    "charging_full": "Ladattu",
+                    "offline": "Ei yhteyttä",
+                    "locating": "Paikantaa",
+                    "stop": "Pysäytetty",
+                    "continue_mowing": "Jatka leikkaamista",
+                    "stuck": "Jumissa",
+                    "updating_firmware": "Opdating firmware"
                 }
             },
             "sunseeker_battery": {
@@ -230,25 +231,26 @@
         "lawn_mower": {
             "sunseeker_lawnmower": {
                 "state": {
-                    "Standby": "Valmiustila",
-                    "Mowing": "Leikkaa",
-                    "On the way home": "Palaa kotiin",
-                    "Charging": "Lataa",
-                    "Mowing border": "Reunaleikkaus",
-                    "Unknown": "Tuntematon",
-                    "Unknown4": "Tila 4",
-                    "Idle": "Valmiustila",
-                    "Working": "Työskentelee",
-                    "Pause": "Tauko",
-                    "Error": "Virhe",
-                    "Return": "Palaa kotiin",
-                    "Return pause": "Paluutauko",
-                    "Charging full": "Ladattu",
-                    "Offline": "Ei yhteyttä",
-                    "Locating": "Paikantaa",
-                    "Stop": "Pysäytetty",
-                    "Continue mowing": "Jatka leikkaamista",
-                    "Stuck": "Jumissa"
+                    "standby": "Valmiustila",
+                    "mowing": "Leikkaa",
+                    "on_the_way_home": "Palaa kotiin",
+                    "charging": "Lataa",
+                    "mowing_border": "Reunaleikkaus",
+                    "unknown": "Tuntematon",
+                    "unknown4": "Tila 4",
+                    "idle": "Valmiustila",
+                    "working": "Työskentelee",
+                    "pause": "Tauko",
+                    "error": "Virhe",
+                    "return": "Palaa kotiin",
+                    "return_pause": "Paluutauko",
+                    "charging_full": "Ladattu",
+                    "offline": "Ei yhteyttä",
+                    "locating": "Paikantaa",
+                    "stop": "Pysäytetty",
+                    "continue_mowing": "Jatka leikkaamista",
+                    "stuck": "Jumissa",
+                    "updating_firmware": "Opdating firmware"
                 }
             }
         },
