--- a/custom_components/sunseeker/translations/fr.json
+++ b/custom_components/sunseeker/translations/fr.json
@@ -141,25 +141,26 @@
             "sunseeker_mower_state": {
                 "name": "État du robot",
                 "state": {
-                    "Standby": "En attente",
-                    "Mowing": "En cours de tonte",
-                    "On the way home": "Sur le chemin du retour",
-                    "Charging": "En charge",
-                    "Mowing border": "Coupe des bordures",
-                    "Unknown": "Inconnu",
-                    "Unknown4": "Mode 4",
-                    "Working": "En fonctionnement",
-                    "Locating": "Localisation",
-                    "Idle": "Inactif",
-                    "Pause": "Pause",
-                    "Error": "Erreur",
-                    "Return": "Retour",
-                    "Return pause": "Retour en pause",
-                    "Charging full": "Chargé",
-                    "Offline": "Hors ligne",
-                    "Stop": "Arrêté",
-                    "Continue mowing": "Continuer la tonte",
-                    "Stuck": "Bloqué"
+                    "standby": "En attente",
+                    "mowing": "En cours de tonte",
+                    "on_the_way_home": "Sur le chemin du retour",
+                    "charging": "En charge",
+                    "mowing_border": "Coupe des bordures",
+                    "unknown": "Inconnu",
+                    "unknown4": "Mode 4",
+                    "working": "En fonctionnement",
+                    "locating": "Localisation",
+                    "idle": "Inactif",
+                    "pause": "Pause",
+                    "error": "Erreur",
+                    "return": "Retour",
+                    "return_pause": "Retour en pause",
+                    "charging_full": "Chargé",
+                    "offline": "Hors ligne",
+                    "stop": "Arrêté",
+                    "continue_mowing": "Continuer la tonte",
+                    "stuck": "Bloqué",
+                    "updating_firmware": "Opdating firmware"
                 }
             },
             "sunseeker_battery": {
@@ -238,25 +239,26 @@
         "lawn_mower": {
             "sunseeker_lawnmower": {
                 "state": {
-                    "Standby": "En attente",
-                    "Mowing": "En cours de tonte",
-                    "On the way home": "Sur le chemin du retour",
-                    "Charging": "En charge",
-                    "Mowing border": "Coupe des bordures",
-                    "Unknown": "Inconnu",
-                    "Unknown4": "Mode 4",
-                    "Working": "En fonctionnement",
-                    "Locating": "Localisation",
-                    "Idle": "Inactif",
-                    "Pause": "Pause",
-                    "Error": "Erreur",
-                    "Return": "Retour",
-                    "Return pause": "Retour en pause",
-                    "Charging full": "Chargé",
-                    "Offline": "Hors ligne",
-                    "Stop": "Arrêté",
-                    "Continue mowing": "Continuer la tonte",
-                    "Stuck": "Bloqué"
+                    "standby": "En attente",
+                    "mowing": "En cours de tonte",
+                    "on_the_way_home": "Sur le chemin du retour",
+                    "charging": "En charge",
+                    "mowing_border": "Coupe des bordures",
+                    "unknown": "Inconnu",
+                    "unknown4": "Mode 4",
+                    "working": "En fonctionnement",
+                    "locating": "Localisation",
+                    "idle": "Inactif",
+                    "pause": "Pause",
+                    "error": "Erreur",
+                    "return": "Retour",
+                    "return_pause": "Retour en pause",
+                    "charging_full": "Chargé",
+                    "offline": "Hors ligne",
+                    "stop": "Arrêté",
+                    "continue_mowing": "Continuer la tonte",
+                    "stuck": "Bloqué",
+                    "updating_firmware": "Opdating firmware"
                 }
             }
         },
