Standardize sensor key naming to lowercase
Updated sensor keys in sensor.py and translation files (da, de, en, fr) to use lowercase (e.g., sunseeker_taskprogress) for consistency and to avoid potential mismatches between code and translations.

--- a/custom_components/sunseeker/translations/da.json
+++ b/custom_components/sunseeker/translations/da.json
@@ -131,13 +131,13 @@
 			"sunseeker_blade_height": {
 				"name": "Kniv højde"
 			},
-			"sunseeker_taskProgress": {
+			"sunseeker_taskprogress": {
 				"name": "Progress"
 			},
-			"sunseeker_taskTotalArea": {
+			"sunseeker_tasktotalarea": {
 				"name": "Total område"
 			},
-			"sunseeker_taskCoverArea": {
+			"sunseeker_taskcoverarea": {
 				"name": "Klippet område"
 			},
 			"sunseeker_net4g_level": {
