Normalize rain sensor state keys to lowercase
Updated rain sensor state keys in const.py and all translation files to use lowercase and snake_case for consistency. This improves uniformity across code and translations, reducing potential mismatches.

--- a/custom_components/sunseeker/translations/da.json
+++ b/custom_components/sunseeker/translations/da.json
@@ -195,10 +195,10 @@
             "sunseeker_rain_status": {
 				"name": "Regn sensor",
 				"state": {
-					"Dry": "Tør",
-					"Dry countdown": "Tør nedtæller",
-					"Wet": "Våd",
-					"Unknown": "Ukendt"
+					"dry": "Tør",
+					"dry_countdown": "Tør nedtæller",
+					"wet": "Våd",
+					"unknown": "Ukendt"
 				}
 			},
 			"sunseekerzone1": {
